@@ -1,3 +1,7 @@
+2011-04-10  Alexander Kurtz <kurtz.alex@googlemail.com>
+
+	* util/grub-mkconfig_lib.in: Add missing quotes.
+
 2011-04-10  Colin Watson  <cjwatson@ubuntu.com>
 
 	* grub-core/gnulib/argp-parse.c (__argp_input): Don't crash if pstate
